fixing blue text for dropdown items on mobile

--- a/site/src/styles/selections/Dropdown.module.css
+++ b/site/src/styles/selections/Dropdown.module.css
@@ -72,6 +72,7 @@
     padding-right: var(--radius);
     padding-bottom: 15px;
     background-color: transparent;
+    color: var(--black);
     font-size: var(--font-size-extra-small);
     transition: background-color var(--transition-duration) ease;
 }
